# rpg_davis_simulator

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
datasets/rosbags/: 3walls-20171029-091651.bag
datasets/scenes/: 3planes_trajectory.txt
launch/: 3planes_render.launch  3planes_simulate.launch  3walls_render.launch  3walls_simulate.launch  dvs_simulator.launch  render_dataset.launch  visualization_only.launch
scripts/: extract_motion_field.py  load_trajectory.py  motion_field.py  prepare_dataset.py
src/: dvs_simulator.py
src/dvs_simulator_py/: airsim_img_publisher.py  dataset_utils.py  dvs_plane_simulator.py  dvs_simulator.py  dvs_simulator_streamingmode.py  extract_motion_field.py  render_dataset.py
