<?xml version="1.0"?>
<package>
  <name>dvs_simulator_py</name>
  <version>0.0.1</version>
  <description>Python DVS simulator</description>

  <maintainer email="rebecq@ifi.uzh.ch">Henri Rebecq</maintainer>
  <license>tbd</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rospkg</build_depend>
  <build_depend>dvs_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>vikit_py</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rospkg</run_depend>
  <run_depend>dvs_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>vikit_py</run_depend>

</package>
