<?xml version="1.0"?>
<package>
  <name>dvs_simulator_py</name>
  <version>0.0.0</version>
  <description>Python DVS simulator</description>

  <maintainer email="rebecq@ifi.uzh.ch">Henri Rebecq</maintainer>
  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rospkg</build_depend>
  <build_depend>dvs_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rospkg</run_depend>
  <run_depend>dvs_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>dvs_renderer</run_depend>

</package>
